# ResumeIntel

./: .env.example  .gitignore  CLAUDE.md  Claude_Code_Project_Blueprint.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  git_changes.txt  project_godfather_specs.md  project_progress_so_far.md  pyproject.toml  start.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md
alembic/: README  env.py
docs/: PROJECT_STATUS.md  TECHNICAL_REFERENCE.md  agent-pipeline.md  api-design.md  architecture.md  rag-engine.md
docs/decisions/: 001-multi-agent-over-monolithic.md  002-faiss-over-pinecone.md  003-sbert-embedding-model.md  004-fastapi-over-express.md
frontend/: CLAUDE.md  FRONTEND.md  errors.txt  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: CLAUDE.md  exceptions.py  main.py  pipeline.py
src/agents/: __init__.py  ats_agent.py  base_agent.py  generation_agent.py  ingestion_agent.py  interview_agent.py  quality_agent.py  sync_agent.py  tailoring_agent.py  weak_detection_agent.py
src/api/: CLAUDE.md  __init__.py  deps.py
src/config/: industry_profiles.py  settings.py
src/db/: database.py  models.py  redis_store.py
src/llm/: client.py
src/parsers/: __init__.py  jd_parser.py  resume_parser.py
src/rag/: __init__.py  embedder.py  retriever.py  vector_store.py
src/scoring/: __init__.py  alignment.py  impact_scorer.py  keyword_coverage.py
src/tasks/: celery_app.py  pipeline_task.py
tests/: conftest.py
tests/agents/: test_generation_agent.py  test_ingestion_agent.py  (+4 more)
(+57 files in other folders)
